--- a/kees-server/TODO
+++ b/kees-server/TODO
@@ -1,8 +1,10 @@
 TODO
 [ ] - add command ack on websocket (+ update of command)
-[ ] - update web client refresh to remove existing devices
-[ ] - update web client to show online status of device
-[ ] - add command history endpoint
 [ ] - add command history to web client
 [ ] - add users
 [ ] - add websocket to client (and endpoints to support?)
+
+6/17/22
+[x] - update web client refresh to remove existing devices
+[x] - update web client to show online status of device
+[x] - add command history endpoint
